<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HypeNotify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search…</string>
    <string name="loading">Loading…</string>
    <string name="check_now">Check Now</string>
    <string name="track_api">Track API</string>
    <string name="checking">Checking…</string>
    <string name="amount">Amount</string>
    <string name="coins">Coins</string>
    <string name="back">Back</string>
    <string name="alarm_going_off">Alarm Going Off!</string>
    <string name="check_timers_validity">Check Timers Validity</string>
    <string name="save_device">Save Device</string>
    <string name="timer_did_not_specify_a_message">Timer did not Specify a Message.</string>
    <string name="sleep">Sleep</string>
    <string name="stop">Stop</string>
    <string name="timer_going_off">Timer Going Off!</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="request_permissions_in_settings_message">You are about to go into the settings app. Please enable all
        the necessary permissions.
    </string>
    <string name="request_permissions_reasoning">"Which Permissions do we need and why:\n \nNotifications (should be\n
        obvious)\n- Including Full Screen Intents (should be on by default though)\n\nUnoptimised background usage.\n
        (Needed for Timers and other things such as Bazaar Order Tracking and notifications overall.)\n \n Access Fine
        Location\n - Needed to access your Wlan name. Used to detect if you at home for example to auto disable the
        bazaar tracker while abroad etc.\n \nShow over\n other Apps (Needed for Timers to work so we can open screens
        for it ANYWHERE. Including the locked Screen!)\n\n\n \n "
    </string>
    <string name="add_new_bazaar_tracker">Add New Tracker</string>
    <string name="current_bazaar_trackers">Current Trackers</string>
    <string name="enter_bazaar_item_to_track_id">Enter Item Name. (If you cant find it try the Item Id)</string>
    <string name="done">Done</string>
    <string name="edit_bazaar_item_tracker">Edit Tracker</string>
    <string name="delete">Delete</string>
    <string name="edit_trackers">Edit Trackers</string>
    <string name="no_data_tracking_stopped">No Data / Tracking Stopped</string>
    <string name="last_updated_s_seconds_ago">Last updated: %s Seconds ago.</string>
    <string name="openMinecraft">Open Minecraft</string>
    <string name="suggested_item_format">%1$s | Profit: %2$d coins (%3$d%%)</string>
    <string name="suggested_insta_sell_header">Suggested Insta Sell Items:</string>
    <string name="suggested_sell_offer_header">Suggested Sell Offer Items:</string>
</resources>