<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              android:gravity="center">

    <TextView
            android:id="@+id/permission_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_permissions_in_settings_message"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"/>

    <TextView
            android:layout_width="284dp"
            android:layout_height="wrap_content" android:id="@+id/request_permissions_which_and_why"
            android:text="@string/request_permissions_reasoning" android:textAlignment="viewStart"/>
    <Button
            android:id="@+id/btn_go_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_settings">
    </Button>
</LinearLayout>