<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <Button
                android:id="@+id/check_now_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_now"/>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_bazaar_update" android:layout_weight="1" android:max="15"
                android:indeterminate="false"/>
        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <Switch
                android:text="@string/track_api"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggle_tracking_button" android:checked="true"/>

    </LinearLayout>

    <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bazaar_item_layout">
    </LinearLayout>

</LinearLayout>